--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.3.7",
     "bootstrap": "^5.3.8",
     "next": "^16.0.10",
+    "nextjs-sitemap-generator": "^1.3.1",
     "react": "19.2.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "19.2.1"
