--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && ts-node sitemap-generator.ts",
+    "build": "next build && node sitemap-generator.ts",
     "start": "next start",
     "lint": "eslint"
   },
