--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && node sitemap-generator.ts",
+    "build": "next build && ts-node sitemap-generator.ts",
     "start": "next start",
     "lint": "eslint"
   },
@@ -27,6 +27,7 @@
     "autoprefixer": "^10.4.22",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
