--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && ts-node sitemap-generator.ts",
+    "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "eslint"
   },
@@ -15,6 +16,7 @@
     "@mui/material": "^7.3.7",
     "bootstrap": "^5.3.8",
     "next": "^16.0.10",
+    "next-sitemap": "^4.2.3",
     "nextjs-sitemap-generator": "^1.3.1",
     "react": "19.2.1",
     "react-bootstrap": "^2.10.10",
@@ -25,8 +27,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.22",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.8",
+    "eslint": "^10.0.0",
+    "eslint-config-next": "^0.2.4",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   }
