--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.7",
     "@mui/material": "^7.3.7",
+    "@mui/material-nextjs": "^7.3.8",
     "bootstrap": "^5.3.8",
     "next": "^16.0.10",
     "next-sitemap": "^4.2.3",
