--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^7.3.7",
     "@mui/material": "^7.3.7",
     "@mui/material-nextjs": "^7.3.8",
+    "@next/third-parties": "^16.1.6",
     "bootstrap": "^5.3.8",
     "next": "^16.0.10",
     "next-sitemap": "^4.2.3",
